test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_values_types/src/deprecated_attr.sw
library;

#[deprecated(note = true)]
pub fn not_ok() {}

pub fn call_not_ok() {
    not_ok();
}